Concatenate JWKS path with existing path on domain if present